# DonutCarMonitor

./: .gitignore  CMakeLists.txt  README.md  build.bat  install.bat
src/: SU7Model.qml  images.qrc  interface.cpp  interface.h  main.cpp  main.qml  maps.qrc  meshes.qrc  qml.qrc  textures.qrc
src/components/: AirCondControlBar.qml  AirCondFanSlider.qml  ColorSlider.qml  ControlButton.qml  ControlSlider.qml  FunctionsBar.qml  IconButton.qml  IconSlider.qml  IconSwitch.qml  Navigation.qml  ParticleWind3DItem.qml  ParticleWind3DSystem.qml  ParticleWindSystem.qml  RollbackAni.qml  SettingsList.qml  StatusBar.qml  SwipeArea.qml  TRSController.qml  TemperatureList.qml
src/hmi/: Aircond.qml  App.qml  CarModel.qml  ControlCenter.qml  Home.qml  Setting.qml
src/media/handler/: donut_av_decode_handler.h
src/media/media/: core.h  donut_av_codec_base.cpp
src/media/player/: donut_qml_av_manager.h  donut_scene.cpp  donut_scene.h  donut_sdl_audio_player.cpp  playlist_model.h
src/playerUI/: ControlBar.qml  CoverArea.qml  PlayerMain.qml  Playlist.qml  VideoOptions.qml  main.qml
